--- a/index.html
+++ b/index.html
@@ -2269,6 +2269,8 @@ ribbons and plots for each unmixed control</a></p>
 </div>
 <div id="ssm" class="section level3">
 <h3>SSM</h3>
+<p><a href="https://app.box.com/file/1938190300586">Spectral Unmixing
+Details for 001</a></p>
 </div>
 <div id="unmixing-results-cell-controls" class="section level3">
 <h3>Unmixing results: cell controls</h3>
