Update latest version of index.html

--- a/index.html
+++ b/index.html
@@ -1488,7 +1488,7 @@ font-size: 0.95em;
 4</h1>
 <h4 class="author">John Bianchi Colangeli, Kelly Lundsten, Fanuel
 Messaggio, Andrew Patentrager</h4>
-<h4 class="date">July 2025 push test</h4>
+<h4 class="date">July 2025</h4>
 
 </div>
 
