--- a/index.html
+++ b/index.html
@@ -1517,8 +1517,8 @@ data we need for the OMIP.</p>
 <h2><strong>PBMCs</strong></h2>
 <table>
 <colgroup>
-<col width="13%" />
-<col width="86%" />
+<col width="20%" />
+<col width="79%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -1536,18 +1536,18 @@ of two donor samples)</td>
 </div>
 <div id="panel-info" class="section level2">
 <h2><strong>Panel Info</strong></h2>
-<table>
+<table style="width:100%;">
 <colgroup>
 <col width="10%" />
-<col width="8%" />
-<col width="6%" />
-<col width="6%" />
-<col width="6%" />
-<col width="6%" />
-<col width="11%" />
-<col width="16%" />
-<col width="6%" />
-<col width="19%" />
+<col width="10%" />
+<col width="10%" />
+<col width="10%" />
+<col width="10%" />
+<col width="10%" />
+<col width="10%" />
+<col width="10%" />
+<col width="10%" />
+<col width="10%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -2277,10 +2277,10 @@ Details for 001</a></p>
 <p><a href="https://app.box.com/folder/333222412731">.pdfs of all
 unmixed controls for matrix 001</a></p>
 </div>
-<div id="xns" class="section level3">
-<h3>1xNs</h3>
-<p><a href="https://drive.google.com/file/d/1_xLTdIdyj8Yb_Z_1nuHxowsNZ_J-naNy/view?usp=drive_link" title="Title tooltip">Link</a><a href="https://beckman.box.com/s/3l0pyxs34q9zg65gmmdnpvpv6d9gzdwq" title="Title tooltip">to</a><a href="https://beckman.box.com/s/hoon09y27ww75sya6yzex5o5c0wx5r30">: 1xNs
-of cell controls unmixed with matrix 001</a></p>
+<div id="xns-of-unmixed-single-stained-cells" class="section level3">
+<h3>1xNs of unmixed single stained cells</h3>
+<p><a href="https://app.box.com/folder/333241328640">PDFs of cell
+control 1xNs unmixed with matrix 001</a></p>
 </div>
 </div>
 </div>
