Add index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1517,8 +1517,8 @@ data we need for the OMIP.</p>
 <h2><strong>PBMCs</strong></h2>
 <table>
 <colgroup>
-<col width="23%" />
-<col width="76%" />
+<col width="27%" />
+<col width="72%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -2057,6 +2057,8 @@ by Nelson on on 7/11/25.</p>
 <h2 class="tabset"><strong>FCS Files</strong></h2>
 <div id="fmms-and-mini-panels" class="section level3">
 <h3>FMMs and mini-panels</h3>
+<p><a href="https://app.box.com/folder/333245702120">Link to raw FCS
+files: FMMSs, mini-panels, fullstains</a></p>
 <table>
 <thead>
 <tr class="header">
@@ -2118,138 +2120,17 @@ by Nelson on on 7/11/25.</p>
 </div>
 <div id="single-color-control-files" class="section level3 tabset">
 <h3 class="tabset">single color control files</h3>
-<div id="cells" class="section level4">
-<h4>cells</h4>
-<table>
-<thead>
-<tr class="header">
-<th align="left"><strong>sample #</strong></th>
-<th align="left"><strong>filename</strong></th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">1</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">2</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">4</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">5</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">6</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">7</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">8</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">9</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">10</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">11</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">12</td>
-<td align="left"></td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="beads" class="section level4">
-<h4>beads</h4>
-<table>
-<thead>
-<tr class="header">
-<th align="left"><strong>sample #</strong></th>
-<th align="left"><strong>filename</strong></th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">1</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">2</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">3</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">4</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">5</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">6</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">7</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">8</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">9</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">10</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">11</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">12</td>
-<td align="left"></td>
-</tr>
-</tbody>
-</table>
-</div>
+<p><a href="https://app.box.com/folder/333247847268">Link to raw
+single-color control files</a></p>
 </div>
 </div>
 <div id="overview-of-the-workflow" class="section level2">
 <h2>Overview of the workflow</h2>
 <ul>
 <li>raw bead and cell control .fcs files were loaded into two separate
-experiment files.</li>
+experiment files (CytExpert off-instrument).</li>
 <li>scatter and spectral ribbon plots were examined for each control one
 by one.</li>
-<li>The following controls were flagged for potential issues:</li>
 </ul>
 </div>
 <div id="single-color-control-quality-check" class="section level2">
@@ -2259,7 +2140,15 @@ by one.</li>
 <h2 class="tabset">Unmixing Matrix #001</h2>
 <div id="description" class="section level3">
 <h3>Description</h3>
-<p>First unmxing matrix attempted</p>
+<p>First unmxing matrix attempted. All controls were cleaned for
+contaminating events. All spectral controls are beads except for
+Viakrome808 (viability) and R720-IgA (I don’t think this clone binds to
+VersaComp beads very well)</p>
+</div>
+<div id="unmixed-.fcs-files" class="section level3">
+<h3>Unmixed .fcs files</h3>
+<p><a href="https://app.box.com/folder/333247578556">FCS files: Unmixed
+FMMS, mini-panels, full stains, unstained for healthy and CLL</a></p>
 </div>
 <div id="spectral-unmixing-setup" class="section level3">
 <h3>Spectral Unmixing Setup</h3>
