Add index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1511,8 +1511,8 @@ data we need for the OMIP.</p>
 <h2><strong>PBMCs</strong></h2>
 <table>
 <colgroup>
-<col width="27%" />
-<col width="72%" />
+<col width="30%" />
+<col width="69%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -2006,14 +2006,11 @@ Buffer (1:20)</li>
 </div>
 <div id="staining-procedure" class="section level2">
 <h2><strong>Staining Procedure</strong></h2>
-<div id="thawing-pbmcs" class="section level3">
-<h3>Thawing PBMCs</h3>
+<p><strong>Thawing PBMCs</strong></p>
 <p>PBMC vials were placed in a 37C water bath until a samll ice crystal
 remained and PBMCs were transferred to 10 mL of thaw medium, spun at 400
 x g for 10 minutes, and washed 1X before counting.</p>
-</div>
-<div id="blocking-and-staining" class="section level3">
-<h3>Blocking and Staining</h3>
+<p><strong>Blocking and Staining</strong></p>
 <p>PBMCs were pre-blocked in Human Fc and monocyte block (1:20) for 15
 minutes and aliquoted to 5mL FACS tubes or 96-well plates for staining.
 Cells were resuspended 100 uL Viakrome808 and stained for 15 minutes at
@@ -2026,23 +2023,18 @@ conjugate added to wells followed by 50uL of cell suspension adjusted to
 to 5e6 cells/mL. Samples and controls were stained for 30 minutes at RT
 and washed 3X before acquisition.</p>
 </div>
-</div>
 <div id="instrument-settings" class="section level2">
 <h2><strong>Instrument Settings</strong></h2>
-<div id="instrument-qc" class="section level3">
-<h3>Instrument QC</h3>
+<p><strong>Instrument QC</strong></p>
 <p>Instrument was QCd on the day of acquistion (7/22/25) but did not
 pass for all detectors. The instrument passed QC the day it was serviced
 by Nelson on on 7/11/25.</p>
-</div>
-<div id="instrument-and-acquisition-settings" class="section level3">
-<h3>Instrument and Acquisition Settings</h3>
+<p><strong>Instrument and Acquisition Settings</strong></p>
 <ul>
 <li>Control and sample data were recorded in three experiment files</li>
 <li>Assay gain settings were applied to all tubes/wells</li>
 <li>all samples run at medium medium flow rate</li>
 </ul>
-</div>
 </div>
 </div>
 <div id="data-analysis" class="section level1 tabset">
