Add index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1511,8 +1511,8 @@ data we need for the OMIP.</p>
 <h2><strong>PBMCs</strong></h2>
 <table>
 <colgroup>
-<col width="31%" />
-<col width="68%" />
+<col width="32%" />
+<col width="67%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -2126,7 +2126,9 @@ by one.</li>
 <p>First unmxing matrix attempted. All controls were cleaned for
 contaminating events. All spectral controls are beads except for
 Viakrome808 (viability) and R720-IgA (I don’t think this clone binds to
-VersaComp beads very well)</p>
+VersaComp beads very well).</p>
+<p>A complete copy of the unmixing experiment (.xitsp file + .fcs file
+directory with control files can be found <a href="https://app.box.com/folder/334368687874">here</a>)</p>
 </div>
 <div id="unmixed-.fcs-files" class="section level3">
 <h3><strong>Unmixed .fcs files</strong></h3>
