--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="John Bianchi Colangeli, Kelly Lundsten, Fanuel Messaggio, Andrew Patentrager" />
+<meta name="author" content="John Bianchi Colangeli, Kelly Lundsten, Fanuel Messaggio, Andrew Patentreger" />
 
 
 <title>35-color B Cell + Myeloid Panel: Iteration 4</title>
@@ -1481,7 +1481,7 @@ border-radius: 0px;
 <h1 class="title toc-ignore">35-color B Cell + Myeloid Panel: Iteration
 4</h1>
 <h4 class="author">John Bianchi Colangeli, Kelly Lundsten, Fanuel
-Messaggio, Andrew Patentrager</h4>
+Messaggio, Andrew Patentreger</h4>
 <h4 class="date">July 2025</h4>
 
 </div>
@@ -2043,7 +2043,7 @@ by Nelson on on 7/11/25.</p>
 <h2 class="tabset"><strong>FCS Files</strong></h2>
 <div id="fmms-and-mini-panels" class="section level3">
 <h3><strong>FMMs and mini-panels</strong></h3>
-<p><a href="https://app.box.com/folder/333245702120">Link to raw FCS
+<p><a href="https://app.box.com/folder/333246779155">Link to raw FCS
 files: FMMSs, mini-panels, fullstains</a></p>
 <table>
 <thead>
@@ -2106,6 +2106,10 @@ files: FMMSs, mini-panels, fullstains</a></p>
 </div>
 <div id="single-color-control-files" class="section level3 tabset">
 <h3 class="tabset"><strong>single color control files</strong></h3>
+<p>If a bead control filename contains _new, it means I reran this
+control at a later time. If a filename contains _cleaned, it is a
+cleaned control file and contains a subset of events from the original
+control file.</p>
 <p><a href="https://app.box.com/folder/333247847268">Link to raw
 single-color control files</a></p>
 </div>
